infra/prod-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.CarBids.autos
    - api.CarBids.autos
    - id.CarBids.autos
    secretName: CarBids-tls
  rules:
  - host: app.CarBids.autos
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webapp-clusterip
            port: 
              number: 3000
  - host: api.CarBids.autos
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-clusterip
            port: 
              number: 80
  - host: id.CarBids.autos
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: identity-clusterip
            port: 
              number: 80
